--- a/content/publication/amendola-2019-maximum/cite.bib
+++ b/content/publication/amendola-2019-maximum/cite.bib
@@ -1,7 +1,10 @@
 @article{amendola2019maximum,
  author = {Améndola, Carlos and Kosta, Dimitra and Kubjas, Kaie},
- journal = {arXiv preprint arXiv:1905.07396},
+ journal = {Algebraic Statistics},
  title = {Maximum Likelihood Estimation of Toric Fano Varieties},
- year = {2019}
+ year = {2020},
+ volume = {11},
+ issue = {1},
+ pages = {5--30}
 }
 
