--- a/content/publication/austrin-2017-tensor/cite.bib
+++ b/content/publication/austrin-2017-tensor/cite.bib
@@ -1,7 +1,18 @@
-@article{austrin2017tensor,
- author = {Austrin, Per and Kaski, Petteri and Kubjas, Kaie},
- journal = {arXiv preprint arXiv:1712.09630},
- title = {Tensor network complexity of multilinear maps},
- year = {2017}
+@InProceedings{austrin2019tensor,
+  author =	{Per Austrin and Petteri Kaski and Kaie Kubjas},
+  title =	{{Tensor Network Complexity of Multilinear Maps}},
+  booktitle =	{10th Innovations in Theoretical Computer Science  Conference (ITCS 2019)},
+  pages =	{7:1--7:21},
+  series =	{Leibniz International Proceedings in Informatics (LIPIcs)},
+  ISBN =	{978-3-95977-095-8},
+  ISSN =	{1868-8969},
+  year =	{2018},
+  volume =	{124},
+  editor =	{Avrim Blum},
+  publisher =	{Schloss Dagstuhl--Leibniz-Zentrum fuer Informatik},
+  address =	{Dagstuhl, Germany},
+  URL =		{http://drops.dagstuhl.de/opus/volltexte/2018/10100},
+  URN =		{urn:nbn:de:0030-drops-101006},
+  doi =		{10.4230/LIPIcs.ITCS.2019.7},
+  annote =	{Keywords: arithmetic complexity, lower bound, multilinear map, tensor network}
 }
-
