student and article updates

--- a/content/publication/krone-2019-uniqueness/cite.bib
+++ b/content/publication/krone-2019-uniqueness/cite.bib
@@ -1,7 +1,11 @@
-@article{krone2019uniqueness,
- author = {Krone, Robert and Kubjas, Kaie},
- journal = {arXiv preprint arXiv:1902.02868},
- title = {Uniqueness of nonnegative matrix factorizations by rigidity theory},
- year = {2019}
+@article{krone2021uniqueness,
+  title={Uniqueness of nonnegative matrix factorizations by rigidity theory},
+  author={Krone, Robert and Kubjas, Kaie},
+  journal={SIAM Journal on Matrix Analysis and Applications},
+  volume={42},
+  number={1},
+  pages={134--164},
+  year={2021},
+  publisher={SIAM}
 }
 
