--- a/content/publication/ardiyansyah-2020-model/cite.bib
+++ b/content/publication/ardiyansyah-2020-model/cite.bib
@@ -1,7 +1,7 @@
 @article{ardiyansyah2020model,
  author = {Ardiyansyah, Muhammad and Kosta, Dimitra and Kubjas, Kaie},
  journal = {arXiv preprint arXiv:2005.07171},
- title = {Model Embeddability for Symmetric Group-Based Models},
+ title = {The model-specific Markov embedding problem for symmetric group-based models},
  year = {2020}
 }
 
