update citations and main page

--- a/content/publication/allman-2017-maximum/cite.bib
+++ b/content/publication/allman-2017-maximum/cite.bib
@@ -1,5 +1,5 @@
 @article{allman2017maximum,
- author = {Allman, Elizabeth S and Cervantes, Hector Banos and Evans, Robin and Hoşten, Serkan and Kubjas, Kaie and Lemke, Daniel and Rhodes, John A and Zwiernik, Piotr},
+ author = {Allman, Elizabeth S and Cervantes, Hector Banos and Evans, Robin and Ho\c{s}ten, Serkan and Kubjas, Kaie and Lemke, Daniel and Rhodes, John A and Zwiernik, Piotr},
  journal = {Journal of Algebraic Statistics},
  number = {1},
  pages = {51--84},
