--- a/content/publication/amendola-2019-maximum/cite.bib
+++ b/content/publication/amendola-2019-maximum/cite.bib
@@ -1,7 +1,7 @@
 @article{amendola2019maximum,
- author = {Améndola, Carlos and Kosta, Dimitra and Kubjas, Kaie},
+ author = {Am\'{e}ndola, Carlos and Kosta, Dimitra and Kubjas, Kaie},
  journal = {Algebraic Statistics},
- title = {Maximum Likelihood Estimation of Toric Fano Varieties},
+ title = {Maximum Likelihood Estimation of Toric {F}ano Varieties},
  year = {2020},
  volume = {11},
  issue = {1},
