--- a/content/publication/ardiyansyah-2020-model/cite.bib
+++ b/content/publication/ardiyansyah-2020-model/cite.bib
@@ -1,7 +1,11 @@
-@article{ardiyansyah2020model,
- author = {Ardiyansyah, Muhammad and Kosta, Dimitra and Kubjas, Kaie},
- journal = {arXiv preprint arXiv:2005.07171},
- title = {The model-specific Markov embedding problem for symmetric group-based models},
- year = {2020}
+@article{ardiyansyah2021model,
+  title={The model-specific {M}arkov embedding problem for symmetric group-based models},
+  author={Ardiyansyah, Muhammad and Kosta, Dimitra and Kubjas, Kaie},
+  journal={Journal of Mathematical Biology},
+  volume={83},
+  number={3},
+  pages={1--26},
+  year={2021},
+  publisher={Springer}
 }
 
