--- a/content/publication/belyaeva-2021-identifying/cite.bib
+++ b/content/publication/belyaeva-2021-identifying/cite.bib
@@ -1,6 +1,10 @@
-@article{belyaeva2021identifying,
-  title={Identifying 3D Genome Organization in Diploid Organisms via Euclidean Distance Geometry},
+@article{belyaeva2022identifying,
+  title={Identifying 3{D} genome organization in diploid organisms via euclidean distance geometry},
   author={Belyaeva, Anastasiya and Kubjas, Kaie and Sun, Lawrence J and Uhler, Caroline},
-  journal={arXiv preprint arXiv:2101.05336},
-  year={2021}
+  journal={SIAM Journal on Mathematics of Data Science},
+  volume={4},
+  number={1},
+  pages={204--228},
+  year={2022},
+  publisher={SIAM}
 }
