--- a/content/publication/buczynska-2013-graph/cite.bib
+++ b/content/publication/buczynska-2013-graph/cite.bib
@@ -1,5 +1,5 @@
 @article{buczynska2013graph,
- author = {Buczy\ŉska, Weronika and Buczy\ŉski, Jarosław and Kubjas, Kaie and Michałek, Mateusz},
+ author = {Buczy\ŉska, Weronika and Buczy\ŉski, Jaros\law and Kubjas, Kaie and Micha\lek, Mateusz},
  journal = {Open Mathematics},
  number = {9},
  pages = {1577--1592},
