--- a/content/publication/kubjas-2010-hilbert/cite.bib
+++ b/content/publication/kubjas-2010-hilbert/cite.bib
@@ -3,7 +3,7 @@
  journal = {Journal of Algebraic Statistics},
  number = {1},
  pages = {64--69},
- title = {Hilbert polynomial of the Kimura 3-parameter model},
+ title = {Hilbert polynomial of the {K}imura 3-parameter model},
  volume = {3},
  year = {2012}
 }
