--- a/content/publication/kubjas-2015-fixed/cite.bib
+++ b/content/publication/kubjas-2015-fixed/cite.bib
@@ -3,7 +3,7 @@
  journal = {The Annals of Statistics},
  pages = {422--461},
  publisher = {JSTOR},
- title = {Fixed points of the EM algorithm and nonnegative rank boundaries},
+ title = {Fixed points of the {EM} algorithm and nonnegative rank boundaries},
  year = {2015}
 }
 
