--- a/content/publication/kubjas-2014-conformal/cite.bib
+++ b/content/publication/kubjas-2014-conformal/cite.bib
@@ -4,7 +4,7 @@
  number = {3},
  pages = {861--886},
  publisher = {Springer},
- title = {Conformal blocks, Berenstein--Zelevinsky triangles, and group-based models},
+ title = {Conformal blocks, {B}erenstein--{Z}elevinsky triangles, and group-based models},
  volume = {40},
  year = {2014}
 }
