--- a/content/publication/kubjas-2020-exact/cite.bib
+++ b/content/publication/kubjas-2020-exact/cite.bib
@@ -1,7 +1,10 @@
-@article{kubjas2020exact,
+@article{kubjas2022exact,
   title={Exact solutions in low-rank approximation with zeros},
   author={Kubjas, Kaie and Sodomaco, Luca and Tsigaridas, Elias},
-  journal={arXiv preprint arXiv:2010.15636},
-  year={2020}
+  journal={Linear Algebra and its Applications},
+  volume={641},
+  pages={67--97},
+  year={2022},
+  publisher={Elsevier}
 }
 
