--- a/content/publication/kubjas-2021-algebraic/cite.bib
+++ b/content/publication/kubjas-2021-algebraic/cite.bib
@@ -1,11 +1,6 @@
-@article{krone2021uniqueness,
-  title={Uniqueness of nonnegative matrix factorizations by rigidity theory},
-  author={Krone, Robert and Kubjas, Kaie},
-  journal={SIAM Journal on Matrix Analysis and Applications},
-  volume={42},
-  number={1},
-  pages={134--164},
-  year={2021},
-  publisher={SIAM}
+@article{kubjas2021algebraic,
+  title={Algebraic degree of optimization over a variety with an application to $ p $-norm distance degree},
+  author={Kubjas, Kaie and Kuznetsova, Olga and Sodomaco, Luca},
+  journal={arXiv preprint arXiv:2105.07785},
+  year={2021}
 }
-
