--- a/content/publication/dandrea-2023-special/cite.bib
+++ b/content/publication/dandrea-2023-special/cite.bib
@@ -1,5 +1,5 @@
 @misc{d2022special,
-  title={Special issue of JSC on the occasion of MEGA 2021},
+  title={Foreword: Special issue of JSC on the occasion of MEGA 2021},
   author={D'Andrea, Carlos and Kubjas, Kaie and Mohammadi, Fatemeh},
   journal={Journal of Symbolic Computation},
   year={2022},
