--- a/content/publication/cifuentes-2023-3d/cite.bib
+++ b/content/publication/cifuentes-2023-3d/cite.bib
@@ -1,6 +1,10 @@
-@article{cifuentes20233d,
+@article{cifuentes20243d,
   title={3D genome reconstruction from partially phased Hi-C data},
   author={Cifuentes, Diego and Draisma, Jan and Henriksson, Oskar and Korchmaros, Annachiara and Kubjas, Kaie},
-  journal={arXiv preprint arXiv:2301.11764},
-  year={2023}
+  journal={Bulletin of Mathematical Biology},
+  volume={86},
+  number={4},
+  pages={33},
+  year={2024},
+  publisher={Springer}
 }
