--- a/content/publication/austrin-2020-tensor/cite.bib
+++ b/content/publication/austrin-2020-tensor/cite.bib
@@ -1,7 +1,10 @@
 @article{austrin2017tensor,
  author = {Austrin, Per and Kaski, Petteri and Kubjas, Kaie},
- journal = {arXiv preprint arXiv:1712.09630},
+ journal = {Theory of Computing},
  title = {Tensor network complexity of multilinear maps},
- year = {2017}
+ volume = {18},
+ issue = {16},
+ pages = {1--54},
+ year = {2022}
 }
 
