--- a/content/publication/grosdos-2020-exact/cite.bib
+++ b/content/publication/grosdos-2020-exact/cite.bib
@@ -1,7 +1,9 @@
-@article{grosdos2020exact,
- author = {Grosdos, Alexandros and Heaton, Alexander and Kubjas, Kaie and Kuznetsova, Olga and Scholten, Georgy and Sorea, Miruna-Stefana},
- journal = {arXiv preprint arXiv:2003.04840},
- title = {Exact Solutions in Log-Concave Maximum Likelihood Estimation},
- year = {2020}
+@article{grosdos2023exact,
+  title={Exact solutions in log-concave maximum likelihood estimation},
+  author={Grosdos, Alexandros and Heaton, Alexander and Kubjas, Kaie and Kuznetsova, Olga and Scholten, Georgy and Sorea, Miruna-{\c{S}}tefana},
+  journal={Advances in Applied Mathematics},
+  volume={143},
+  pages={102448},
+  year={2023},
+  publisher={Elsevier}
 }
-
