--- a/content/publication/dewar-2023-on/cite.bib
+++ b/content/publication/dewar-2023-on/cite.bib
@@ -1,6 +1,13 @@
-@article{dewar2023uniqueness,
-  title={On the uniqueness of collections of pennies and marbles},
-  author={Dewar, Sean and Grasegger, Georg and Kubjas, Kaie and Mohammadi, Fatemeh and Nixon, Anthony},
-  journal={arXiv preprint arXiv:2307.03525},
-  year={2023}
+@article{dewar2025uniquenes,
+title = {On the uniqueness of collections of pennies and marbles},
+journal = {Examples and Counterexamples},
+volume = {7},
+pages = {100181},
+year = {2025},
+issn = {2666-657X},
+doi = {https://doi.org/10.1016/j.exco.2025.100181},
+url = {https://www.sciencedirect.com/science/article/pii/S2666657X25000084},
+author = {Sean Dewar and Georg Grasegger and Kaie Kubjas and Fatemeh Mohammadi and Anthony Nixon},
+keywords = {Rigid, Globally rigid, Penny graph, Unit sphere graph},
+abstract = {In this note we study the uniqueness problem for collections of pennies and marbles. More generally, consider a collection of unit d-spheres that may touch but not overlap. Given the existence of such a collection, one may analyse the contact graph of the collection. In particular we consider the uniqueness of the collection arising from the contact graph. Using the language of graph rigidity theory, we prove a precise characterisation of uniqueness (global rigidity) in dimensions 2 and 3 when the contact graph is additionally chordal. We then illustrate a wide range of examples in these cases. That is, we illustrate collections of marbles and pennies that can be perturbed continuously (flexible), are locally unique (rigid) and are unique (globally rigid). We also contrast these examples with the usual generic setting of graph rigidity.}
 }
