--- a/content/publication/kubjas-2024-geometry/cite.bib
+++ b/content/publication/kubjas-2024-geometry/cite.bib
@@ -1,6 +1,10 @@
 @article{kubjas2024geometry,
-  title={Geometry of Polynomial Neural Networks},
+  title={Geometry of polynomial neural networks},
   author={Kubjas, Kaie and Li, Jiayi and Wiesmann, Maximilian},
-  journal={arXiv preprint arXiv:2402.00949},
-  year={2024}
+  journal={Algebraic Statistics},
+  volume={15},
+  number={2},
+  pages={295--328},
+  year={2024},
+  publisher={Mathematical Sciences Publishers}
 }
