--- a/content/publication/dewar-2024-single/cite.bib
+++ b/content/publication/dewar-2024-single/cite.bib
@@ -1,6 +1,10 @@
-@article{dewar2024single,
+@article{dewar2025single,
   title={Single-cell 3D genome reconstruction in the haploid setting using rigidity theory},
   author={Dewar, Sean and Grasegger, Georg and Kubjas, Kaie and Mohammadi, Fatemeh and Nixon, Anthony},
-  journal={arXiv preprint arXiv:2407.10700},
-  year={2024}
+  journal={Journal of Mathematical Biology},
+  volume={90},
+  number={4},
+  pages={1--37},
+  year={2025},
+  publisher={Springer}
 }
