--- a/content/publication/kubjas-2021-algebraic/cite.bib
+++ b/content/publication/kubjas-2021-algebraic/cite.bib
@@ -1,6 +1,8 @@
-@article{kubjas2021algebraic,
-  title={Algebraic degree of optimization over a variety with an application to $ p $-norm distance degree},
+@article{kubjas2025algebraic,
+  title={Algebraic degree of optimization over a variety with an application to $p$-norm distance degree},
   author={Kubjas, Kaie and Kuznetsova, Olga and Sodomaco, Luca},
-  journal={arXiv preprint arXiv:2105.07785},
-  year={2021}
+  journal={Acta Universitatis Sapientiae, Mathematica},
+  year={2025},
+  volume={17},
+  number={3}
 }
