--- a/content/publication/kubjas-2022-log/cite.bib
+++ b/content/publication/kubjas-2022-log/cite.bib
@@ -1,6 +1,13 @@
 @article{kubjas2022log,
-  title={Log-concave density estimation in undirected graphical models},
-  author={Kubjas, Kaie and Kuznetsova, Olga and Robeva, Elina and Semnani, Pardis and Sodomaco, Luca},
-  journal={arXiv preprint arXiv:2206.05227},
-  year={2022}
+    AUTHOR = {Kaie Kubjas and Olga Kuznetsova and Elina Robeva and Pardis Semnani and Luca Sodomaco},
+     TITLE = {Log-concave density estimation in undirected graphical models},
+   JOURNAL = {Bernoulli},
+  FJOURNAL = {Bernoulli},
+      YEAR = {2025},
+    VOLUME = {31},
+    NUMBER = {4},
+     PAGES = {2916-2939},
+      ISSN = {1350-7265},
+       DOI = {10.3150/24-BEJ1831},
+      SICI = {1350-7265(2025)31:4<2916:LCDEIU>2.0.CO;2-Q},
 }
